# oai

./: README.md  chai.py  oai  pyproject.toml  requirements.txt
chai/: cli.py  persistence.py
chai/base/: chat.py  message.py  provider.py
chai/providers/: anthropic.py  chat.py  factory.py  gemini.py  mistral.py  openai.py  provider.py  providers.py  xai.py
