[project]
name = "chai-cli"
version = "1.0.0"
description = "Chat with AI in the terminal"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Darik Harter", email = "darik.harter@gmail.com"}
]
maintainers = [
    {name = "Darik Harter", email = "darik.harter@gmail.com"}
]
keywords = [
    "ai",
    "anthropic",
    "chai",
    "chat",
    "chatgpt",
    "claude",
    "cli",
    "codestral",
    "gemini",
    "genai",
    "gpt",
    "grok",
    "le chat",
    "llm",
    "mistral",
    "openai",
    "terminal",
    "xai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.13.2"
dependencies = [
    "anthropic>=0.49.0",
    "google-genai>=1.5.0",
    "mistralai>=1.5.1",
    "openai>=1.65.5",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/itsdarik/chai"
Repository = "https://github.com/itsdarik/chai"
Issues = "https://github.com/itsdarik/chai/issues"
Changelog = "https://github.com/itsdarik/chai/releases"
